<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.home.about.AboutFragment">

    <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                style="@style/TextTitle"
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tv_about_app"
                style="@style/TextContentPrimary"
                android:text="@string/about_app"
                android:layout_marginTop="8dp"
                android:autoLink="web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <View
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:background="@color/divider_color"
                android:layout_height="0.5dp"/>

        <TextView
                style="@style/TextTitle"
                android:text="@string/project_highlight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tv_highlight"
                style="@style/TextContentPrimary"
                android:text="@string/highlight_tips"
                android:layout_marginTop="8dp"
                android:autoLink="web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <View
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:background="@color/divider_color"
                android:layout_height="0.5dp"/>

        <TextView
                style="@style/TextTitle"
                android:text="@string/open_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tv_open_source"
                style="@style/TextContentPrimary"
                android:text="@string/open_source_content"
                android:layout_marginTop="8dp"
                android:autoLink="web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>