<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:background="?attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <LinearLayout
            android:id="@+id/loading_layout"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ProgressBar
                android:layout_width="18dp"
                android:layout_height="18dp"/>

        <TextView
                android:textSize="15sp"
                android:layout_marginStart="8dp"
                android:text="@string/loading_more"
                android:textColor="@color/textColorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/load_failed_layout"
            android:orientation="horizontal"
            android:gravity="center"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:textSize="15sp"
                android:text="@string/click_to_retry"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_reload"
                android:textColor="@color/textColorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
            android:id="@+id/tv_load_end"
            android:gravity="center"
            android:textSize="15sp"
            android:visibility="gone"
            android:textColor="@color/textColorSecondary"
            android:text="@string/load_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</RelativeLayout>